WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.h

BOOL   LCAPI lcCmdDrawLine     (HANDLE hCmd, double X0, double Y0, double X1, double Y1);
BOOL   LCAPI lcCmdDrawPickbox  (HANDLE hCmd, int Xwnd, int Ywnd);
BOOL   LCAPI lcCmdEqualPoints  (HANDLE hCmd, double X0, double Y0, double X1, double Y1, int Delta);
BOOL   LCAPI lcPaintBegin    (HANDLE hLcWnd);
BOOL   LCAPI lcPaintSetPen   (int Style, int Width, int ColorRed, int ColorGreen, int ColorBlue);
BOOL   LCAPI lcPaintSetBrush (int ColorRed, int ColorGreen, int ColorBlue);
BOOL   LCAPI lcPaintPixel    (double X, double Y, int Size, int ColorRed, int ColorGreen, int ColorBlue);
BOOL   LCAPI lcPaintPoint    (double X, double Y, int PtMode, double PtSize);
BOOL   LCAPI lcPaintLine     (double X0, double Y0, double X1, double Y1);
BOOL   LCAPI lcPaintPlineVer (double X, double Y);
BOOL   LCAPI lcPaintPline    (BOOL bClosed, BOOL bFilled, BOOL bBorder);
BOOL   LCAPI lcPaintCircle   (double X, double Y, double R, BOOL bFilled, BOOL bBorder);
BOOL   LCAPI lcPaintArc      (double X, double Y, double R, double Ang0, double AngArc);
BOOL   LCAPI lcPaintSetFont  (LPCWSTR szFontName, double Height, double Angle, bool bBold, bool bItalic, bool bUnderline, bool bStrikeOut);
BOOL   LCAPI lcPaintSetTextColor (int ColorRed, int ColorGreen, int ColorBlue);
BOOL   LCAPI lcPaintText     (LPCWSTR szText, double X, double Y, int Align);
BOOL   LCAPI lcPaintEnd      ();
// 3D surface
void   LCAPI lcSurfInitialize     (int MaxSectPnt, double AngStep);
void   LCAPI lcSurfUnInitialize   ();
void   LCAPI lcSurfClearTriangles ();
BOOL   LCAPI lcSurfAddTriangle    (double X0, double Y0, double Z0, double X1, double Y1, double Z1, double X2, double Y2, double Z2);
BOOL   LCAPI lcSurfGetZ           (double X, double Y, double* pZ);
BOOL   LCAPI lcSurfGetZ_dbg       (double X, double Y, double* pZ, double* pX0, double* pY0, double* pZ0, double* pX1, double* pY1, double* pZ1, double* pX2, double* pY2, double* pZ2);
void   LCAPI lcSurfClearPlan      ();
BOOL   LCAPI lcSurfAddPlanVer     (double X, double Y, double Bulge);
int    LCAPI lcSurfMakeSection    ();
BOOL   LCAPI lcSurfGetSectPoint   (int iPnt, double* pX, double* pY, double* pZ);
// cross-section

BOOL   LCAPI lcCSectClear        ();
BOOL   LCAPI lcCSectBegin        (int PlineType);
BOOL   LCAPI lcCSectAddPoint     (double X, double Y);
BOOL   LCAPI lcCSectEnd          ();
int    LCAPI lcCSectCalcArea     ();
BOOL   LCAPI lcCSectGetArea      (int iArea, double* pAreaVal, int* pNumPnts);
BOOL   LCAPI lcCSectGetAreaPoint (int iArea, int iPnt, double* pX, double* pY);
// Events
/******************************************************************************
* Functions to handle LiteCAD events
* 
* Client application can define special functions that LiteCAD will call
* when the defined event will happen during user's work with drawing.
* This functions are called"event handlers" and client application
* must provide it to LiteCAD by LcOnEvent... functions
* You don't need to define all event handlers, just those you want to use
*
* Below follows the definitions of syntax of event functions
* Client application must provide exactly the same syntax 
*******************************************************************************/
// window events
typedef void (CALLBACK* F_MOUSEMOVE)    (HANDLE hLcWnd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
typedef void (CALLBACK* F_MOUSEDOWN)    (HANDLE hLcWnd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
typedef void (CALLBACK* F_MOUSEUP)      (HANDLE hLcWnd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
typedef void (CALLBACK* F_MOUSEDBLCLK)  (HANDLE hLcWnd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
typedef void (CALLBACK* F_MOUSESNAP)    (HANDLE hLcWnd, double Delta, double* pX, double* pY);
typedef void (CALLBACK* F_MOUSELEAVE)   (HANDLE hLcWnd);
 
typedef void (CALLBACK* F_MOUSEWHEEL)   (HANDLE hLcWnd, int Flags, int Delta);
typedef void (CALLBACK* F_KEYDOWN)      (HANDLE hLcWnd, int VirtKey, int Flags, BOOL bCtrl, BOOL bShift);
typedef void (CALLBACK* F_PAINT)        (HANDLE hLcWnd, HANDLE hView, int Mode, HDC hDC, int Left, int Top, int Right, int Bottom);
typedef void (CALLBACK* F_ZOOM)         (HANDLE hLcWnd, double Left, double Bottom, double Right, double Top, double PixelSize);
 
typedef void (CALLBACK* F_SELECTVIEW)   (HANDLE hLcWnd, HANDLE hView);
typedef void (CALLBACK* F_GETPOINT)     (HANDLE hLcWnd, HANDLE hView, int Index, double X, double Y);
typedef void (CALLBACK* F_ADDCOMMAND)   (HANDLE hLcWnd);
typedef void (CALLBACK* F_CMD_START)    (HANDLE hCmd, int Prm);
typedef void (CALLBACK* F_CMD_FINISH)   (HANDLE hCmd);
typedef void (CALLBACK* F_CMD_MOUSEDOWN)(HANDLE hCmd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
typedef void (CALLBACK* F_CMD_MOUSEUP)  (HANDLE hCmd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
typedef void (CALLBACK* F_CMD_MOUSEMOVE)(HANDLE hCmd, HDC hDC, int Flags, int Xwin, int Ywin, double X, double Y);
typedef void (CALLBACK* F_CMD_STRING)   (HANDLE hCmd, LPCWSTR szStr);
typedef void (CALLBACK* F_ADDENTITY)    (HANDLE hDrw, HANDLE hBlock, HANDLE hEntity);
typedef void (CALLBACK* F_REGEN)        (HANDLE hDrw, HANDLE hView, int Percent);
typedef void (CALLBACK* F_FIOPROGRESS)  (HANDLE hDrw, int Mode, int IntVal, LPCWSTR szFileName);
typedef void (CALLBACK* F_SELECTION)    (HANDLE hDrw, HANDLE hBlock, BOOL bSelect, int nEnts, HANDLE hEnt, int nTotal);
typedef void (CALLBACK* F_PROPCHANGED)  (HANDLE hDrw, int idProp, HANDLE hObj);
typedef void (CALLBACK* F_GRIPSELECT)   (HANDLE hEnt, int iGrip, double X, double Y);
typedef void (CALLBACK* F_GRIPMOVE)     (HANDLE hEnt, int iGrip, double* pX, double* pY, double* pAngle, bool bDrag);
typedef void (CALLBACK* F_ENTERASE)     (HANDLE hEnt);
typedef void (CALLBACK* F_ENTMOVE)      (HANDLE hEnt, double DX, double DY, bool bDrag);
typedef void (CALLBACK* F_ENTROTATE)    (HANDLE hEnt, double X0, double Y0, double Angle, bool bDrag);
typedef void (CALLBACK* F_ENTSCALE)     (HANDLE hEnt, double X0, double Y0, double Scal, bool bDrag);
typedef void (CALLBACK* F_ENTMIRROR)    (HANDLE hEnt, double X1, double Y1, double X2, double Y2, bool bDrag);
typedef void (CALLBACK* F_ENTPROP)      (HANDLE hEnt, int idProp);
typedef void (CALLBACK* F_FONTREPLACE)  (HANDLE hDrw, LPCWSTR szStyleName, LPCWSTR szOrigName);
typedef void (CALLBACK* F_ADDSTR)       ();
typedef void (CALLBACK* F_HELP)         (HANDLE hDrw, int idTopic);
/******************************************************************************
* Group of functions to set EVENT HANDLERS.
* Client application must call this functions at the beginning
* of execution in order to pass for LiteCAD addresses of the
* application-defined functions that will be called on
* some LiteCAD events. There is no need to use all this
* functions, just set for those events you want to catch. 
*
* IMPORTANT!!!
* Order of the lcOnEvent... functions must be the same as above typedefs (for automatic generation OCX files)
*******************************************************************************/
void LCAPI lcEventReturnCode     (int code);
void LCAPI lcEventsEnable        (BOOL bEnable);
 

void LCAPI lcOnEventMouseMove    (F_MOUSEMOVE pFunc);
void LCAPI lcOnEventMouseDown    (F_MOUSEDOWN pFunc);
void LCAPI lcOnEventMouseUp      (F_MOUSEUP pFunc);
void LCAPI lcOnEventMouseDblClk  (F_MOUSEDBLCLK pFunc);
void LCAPI lcOnEventMouseSnap    (F_MOUSESNAP pFunc);
void LCAPI lcOnEventMouseLeave   (F_MOUSELEAVE pFunc);
void LCAPI lcOnEventMouseWheel   (F_MOUSEWHEEL pFunc);
void LCAPI lcOnEventKeyDown      (F_KEYDOWN pFunc);
    
void LCAPI lcOnEventPaint        (F_PAINT pFunc);
void LCAPI lcOnEventZoom         (F_ZOOM pFunc);
void LCAPI lcOnEventSelectView   (F_SELECTVIEW pFunc);
void LCAPI lcOnEventGetPoint     (F_GETPOINT pFunc);
void LCAPI lcOnEventAddCommand   (F_ADDCOMMAND pFunc);
       

void LCAPI lcOnEventCmdStart     (F_CMD_START pFunc);
     
void LCAPI lcOnEventCmdFinish    (F_CMD_FINISH pFunc);