WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.vb


  Public Declare Function CmdDrawLine Lib "Litecad.dll" Alias "lcCmdDrawLine" (ByVal hCmd As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double) As Integer

  Public Declare Function CmdDrawPickbox Lib "Litecad.dll" Alias "lcCmdDrawPickbox" (ByVal hCmd As Integer, ByVal Xwnd As Integer, ByVal Ywnd As Integer) As Integer

  Public Declare Function CmdEqualPoints Lib "Litecad.dll" Alias "lcCmdEqualPoints" (ByVal hCmd As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Delta As Integer) As Integer

  Public Declare Function PaintBegin Lib "Litecad.dll" Alias "lcPaintBegin" (ByVal hLcWnd As Integer) As Integer

  Public Declare Function PaintSetPen Lib "Litecad.dll" Alias "lcPaintSetPen" (ByVal Style As Integer, ByVal Width As Integer, ByVal ColorRed As Integer, ByVal ColorGreen As Integer, ByVal ColorBlue As Integer) As Integer

  Public Declare Function PaintSetBrush Lib "Litecad.dll" Alias "lcPaintSetBrush" (ByVal ColorRed As Integer, ByVal ColorGreen As Integer, ByVal ColorBlue As Integer) As Integer

  Public Declare Function PaintPixel Lib "Litecad.dll" Alias "lcPaintPixel" (ByVal X As Double, ByVal Y As Double, ByVal Size As Integer, ByVal ColorRed As Integer, ByVal ColorGreen As Integer, ByVal ColorBlue As Integer) As Integer

  Public Declare Function PaintPoint Lib "Litecad.dll" Alias "lcPaintPoint" (ByVal X As Double, ByVal Y As Double, ByVal PtMode As Integer, ByVal PtSize As Double) As Integer

  Public Declare Function PaintLine Lib "Litecad.dll" Alias "lcPaintLine" (ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double) As Integer

  Public Declare Function PaintPlineVer Lib "Litecad.dll" Alias "lcPaintPlineVer" (ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function PaintPline Lib "Litecad.dll" Alias "lcPaintPline" (ByVal bClosed As Integer, ByVal bFilled As Integer, ByVal bBorder As Integer) As Integer

  Public Declare Function PaintCircle Lib "Litecad.dll" Alias "lcPaintCircle" (ByVal X As Double, ByVal Y As Double, ByVal R As Double, ByVal bFilled As Integer, ByVal bBorder As Integer) As Integer

  Public Declare Function PaintArc Lib "Litecad.dll" Alias "lcPaintArc" (ByVal X As Double, ByVal Y As Double, ByVal R As Double, ByVal Ang0 As Double, ByVal AngArc As Double) As Integer

  Public Declare Unicode Function PaintSetFont Lib "Litecad.dll" Alias "lcPaintSetFont" (ByVal szFontName As String, ByVal Height As Double, ByVal Angle As Double, ByVal bBold As Integer, ByVal bItalic As Integer, ByVal bUnderline As Integer, ByVal bStrikeOut As Integer) As Integer

  Public Declare Function PaintSetTextColor Lib "Litecad.dll" Alias "lcPaintSetTextColor" (ByVal ColorRed As Integer, ByVal ColorGreen As Integer, ByVal ColorBlue As Integer) As Integer

  Public Declare Unicode Function PaintText Lib "Litecad.dll" Alias "lcPaintText" (ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal Align As Integer) As Integer

  Public Declare Function PaintEnd Lib "Litecad.dll" Alias "lcPaintEnd" () As Integer

  Public Declare Sub SurfInitialize Lib "Litecad.dll" Alias "lcSurfInitialize" (ByVal MaxSectPnt As Integer, ByVal AngStep As Double)

  Public Declare Sub SurfUnInitialize Lib "Litecad.dll" Alias "lcSurfUnInitialize" ()

  Public Declare Sub SurfClearTriangles Lib "Litecad.dll" Alias "lcSurfClearTriangles" ()

  Public Declare Function SurfAddTriangle Lib "Litecad.dll" Alias "lcSurfAddTriangle" (ByVal X0 As Double, ByVal Y0 As Double, ByVal Z0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Z1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal Z2 As Double) As Integer

  Public Declare Function SurfGetZ Lib "Litecad.dll" Alias "lcSurfGetZ" (ByVal X As Double, ByVal Y As Double, ByRef pZ As Double) As Integer

  Public Declare Function SurfGetZ_dbg Lib "Litecad.dll" Alias "lcSurfGetZ_dbg" (ByVal X As Double, ByVal Y As Double, ByRef pZ As Double, ByRef pX0 As Double, ByRef pY0 As Double, ByRef pZ0 As Double, ByRef pX1 As Double, ByRef pY1 As Double, ByRef pZ1 As Double, ByRef pX2 As Double, ByRef pY2 As Double, ByRef pZ2 As Double) As Integer

  Public Declare Sub SurfClearPlan Lib "Litecad.dll" Alias "lcSurfClearPlan" ()

  Public Declare Function SurfAddPlanVer Lib "Litecad.dll" Alias "lcSurfAddPlanVer" (ByVal X As Double, ByVal Y As Double, ByVal Bulge As Double) As Integer

  Public Declare Function SurfMakeSection Lib "Litecad.dll" Alias "lcSurfMakeSection" () As Integer

  Public Declare Function SurfGetSectPoint Lib "Litecad.dll" Alias "lcSurfGetSectPoint" (ByVal iPnt As Integer, ByRef pX As Double, ByRef pY As Double, ByRef pZ As Double) As Integer

  Public Declare Function CSectClear Lib "Litecad.dll" Alias "lcCSectClear" () As Integer

  Public Declare Function CSectBegin Lib "Litecad.dll" Alias "lcCSectBegin" (ByVal PlineType As Integer) As Integer

  Public Declare Function CSectAddPoint Lib "Litecad.dll" Alias "lcCSectAddPoint" (ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function CSectEnd Lib "Litecad.dll" Alias "lcCSectEnd" () As Integer

  Public Declare Function CSectCalcArea Lib "Litecad.dll" Alias "lcCSectCalcArea" () As Integer

  Public Declare Function CSectGetArea Lib "Litecad.dll" Alias "lcCSectGetArea" (ByVal iArea As Integer, ByRef pAreaVal As Double, ByRef pNumPnts As Integer) As Integer

  Public Declare Function CSectGetAreaPoint Lib "Litecad.dll" Alias "lcCSectGetAreaPoint" (ByVal iArea As Integer, ByVal iPnt As Integer, ByRef pX As Double, ByRef pY As Double) As Integer

  Public Delegate Sub F_MOUSEMOVE (ByVal hLcWnd As Integer, ByVal Button As Integer, ByVal Flags As Integer, ByVal Xwin As Integer, ByVal Ywin As Integer, ByVal X As Double, ByVal Y As Double)
  Public Delegate Sub F_MOUSEDOWN (ByVal hLcWnd As Integer, ByVal Button As Integer, ByVal Flags As Integer, ByVal Xwin As Integer, ByVal Ywin As Integer, ByVal X As Double, ByVal Y As Double)
  Public Delegate Sub F_MOUSEUP (ByVal hLcWnd As Integer, ByVal Button As Integer, ByVal Flags As Integer, ByVal Xwin As Integer, ByVal Ywin As Integer, ByVal X As Double, ByVal Y As Double)
  Public Delegate Sub F_MOUSEDBLCLK (ByVal hLcWnd As Integer, ByVal Button As Integer, ByVal Flags As Integer, ByVal Xwin As Integer, ByVal Ywin As Integer, ByVal X As Double, ByVal Y As Double)
  Public Delegate Sub F_MOUSESNAP (ByVal hLcWnd As Integer, ByVal Delta As Double, ByRef pX As Double, ByRef pY As Double)
  Public Delegate Sub F_MOUSELEAVE (ByVal hLcWnd As Integer)
  Public Delegate Sub F_MOUSEWHEEL (ByVal hLcWnd As Integer, ByVal Flags As Integer, ByVal Delta As Integer)
  Public Delegate Sub F_KEYDOWN (ByVal hLcWnd As Integer, ByVal VirtKey As Integer, ByVal Flags As Integer, ByVal bCtrl As Integer, ByVal bShift As Integer)
  Public Delegate Sub F_PAINT (ByVal hLcWnd As Integer, ByVal hView As Integer, ByVal Mode As Integer, ByVal hDC As Integer, ByVal Left As Integer, ByVal Top As Integer, ByVal Right As Integer, ByVal Bottom As Integer)
  Public Delegate Sub F_ZOOM (ByVal hLcWnd As Integer, ByVal Left As Double, ByVal Bottom As Double, ByVal Right As Double, ByVal Top As Double, ByVal PixelSize As Double)
  Public Delegate Sub F_SELECTVIEW (ByVal hLcWnd As Integer, ByVal hView As Integer)
  Public Delegate Sub F_GETPOINT (ByVal hLcWnd As Integer, ByVal hView As Integer, ByVal Index As Integer, ByVal X As Double, ByVal Y As Double)
  Public Delegate Sub F_ADDCOMMAND (ByVal hLcWnd As Integer)
  Public Delegate Sub F_CMD_START (ByVal hCmd As Integer, ByVal Prm As Integer)
  Public Delegate Sub F_CMD_FINISH (ByVal hCmd As Integer)
  Public Delegate Sub F_CMD_MOUSEDOWN (ByVal hCmd As Integer, ByVal Button As Integer, ByVal Flags As Integer, ByVal Xwin As Integer, ByVal Ywin As Integer, ByVal X As Double, ByVal Y As Double)
  Public Delegate Sub F_CMD_MOUSEUP (ByVal hCmd As Integer, ByVal Button As Integer, ByVal Flags As Integer, ByVal Xwin As Integer, ByVal Ywin As Integer, ByVal X As Double, ByVal Y As Double)
  Public Delegate Sub F_CMD_MOUSEMOVE (ByVal hCmd As Integer, ByVal hDC As Integer, ByVal Flags As Integer, ByVal Xwin As Integer, ByVal Ywin As Integer, ByVal X As Double, ByVal Y As Double)
  Public Delegate Sub F_CMD_STRING (ByVal hCmd As Integer, ByVal szStr As String)
  Public Delegate Sub F_ADDENTITY (ByVal hDrw As Integer, ByVal hBlock As Integer, ByVal hEntity As Integer)
  Public Delegate Sub F_REGEN (ByVal hDrw As Integer, ByVal hView As Integer, ByVal Percent As Integer)
  Public Delegate Sub F_FIOPROGRESS (ByVal hDrw As Integer, ByVal Mode As Integer, ByVal IntVal As Integer, ByVal szFileName As String)
  Public Delegate Sub F_SELECTION (ByVal hDrw As Integer, ByVal hBlock As Integer, ByVal bSelect As Integer, ByVal nEnts As Integer, ByVal hEnt As Integer, ByVal nTotal As Integer)
  Public Delegate Sub F_PROPCHANGED (ByVal hDrw As Integer, ByVal idProp As Integer, ByVal hObj As Integer)
  Public Delegate Sub F_GRIPSELECT (ByVal hEnt As Integer, ByVal iGrip As Integer, ByVal X As Double, ByVal Y As Double)
  Public Delegate Sub F_GRIPMOVE (ByVal hEnt As Integer, ByVal iGrip As Integer, ByRef pX As Double, ByRef pY As Double, ByRef pAngle As Double, ByVal bDrag As Integer)
  Public Delegate Sub F_ENTERASE (ByVal hEnt As Integer)
  Public Delegate Sub F_ENTMOVE (ByVal hEnt As Integer, ByVal DX As Double, ByVal DY As Double, ByVal bDrag As Integer)
  Public Delegate Sub F_ENTROTATE (ByVal hEnt As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal Angle As Double, ByVal bDrag As Integer)
  Public Delegate Sub F_ENTSCALE (ByVal hEnt As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal Scal As Double, ByVal bDrag As Integer)
  Public Delegate Sub F_ENTMIRROR (ByVal hEnt As Integer, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal bDrag As Integer)
  Public Delegate Sub F_ENTPROP (ByVal hEnt As Integer, ByVal idProp As Integer)
  Public Delegate Sub F_FONTREPLACE (ByVal hDrw As Integer, ByVal szStyleName As String, ByVal szOrigName As String)
  Public Delegate Sub F_ADDSTR ()
  Public Delegate Sub F_HELP (ByVal hDrw As Integer, ByVal idTopic As Integer)

  Public Declare Sub EventReturnCode Lib "Litecad.dll" Alias "lcEventReturnCode" (ByVal code As Integer)

  Public Declare Sub EventsEnable Lib "Litecad.dll" Alias "lcEventsEnable" (ByVal bEnable As Integer)

  Public Declare Sub OnEventMouseMove Lib "Litecad.dll" Alias "lcOnEventMouseMove" (pFunc As F_MOUSEMOVE)

  Public Declare Sub OnEventMouseDown Lib "Litecad.dll" Alias "lcOnEventMouseDown" (pFunc As F_MOUSEDOWN)

  Public Declare Sub OnEventMouseUp Lib "Litecad.dll" Alias "lcOnEventMouseUp" (pFunc As F_MOUSEUP)

  Public Declare Sub OnEventMouseDblClk Lib "Litecad.dll" Alias "lcOnEventMouseDblClk" (pFunc As F_MOUSEDBLCLK)

  Public Declare Sub OnEventMouseSnap Lib "Litecad.dll" Alias "lcOnEventMouseSnap" (pFunc As F_MOUSESNAP)

  Public Declare Sub OnEventMouseLeave Lib "Litecad.dll" Alias "lcOnEventMouseLeave" (pFunc As F_MOUSELEAVE)

  Public Declare Sub OnEventMouseWheel Lib "Litecad.dll" Alias "lcOnEventMouseWheel" (pFunc As F_MOUSEWHEEL)

  Public Declare Sub OnEventKeyDown Lib "Litecad.dll" Alias "lcOnEventKeyDown" (pFunc As F_KEYDOWN)

  Public Declare Sub OnEventPaint Lib "Litecad.dll" Alias "lcOnEventPaint" (pFunc As F_PAINT)

  Public Declare Sub OnEventZoom Lib "Litecad.dll" Alias "lcOnEventZoom" (pFunc As F_ZOOM)

  Public Declare Sub OnEventSelectView Lib "Litecad.dll" Alias "lcOnEventSelectView" (pFunc As F_SELECTVIEW)

  Public Declare Sub OnEventGetPoint Lib "Litecad.dll" Alias "lcOnEventGetPoint" (pFunc As F_GETPOINT)

  Public Declare Sub OnEventAddCommand Lib "Litecad.dll" Alias "lcOnEventAddCommand" (pFunc As F_ADDCOMMAND)

  Public Declare Sub OnEventCmdStart Lib "Litecad.dll" Alias "lcOnEventCmdStart" (pFunc As F_CMD_START)

  Public Declare Sub OnEventCmdFinish Lib "Litecad.dll" Alias "lcOnEventCmdFinish" (pFunc As F_CMD_FINISH)
